@@ -1,6 +1,9 @@
 #!/usr/bin/perl -w
 #
 # $Log$
+# Revision 1.8  2004/09/07 13:19:22  ilmari
+# SNMP plugins now honour the "host" environment variable if they can't deduce the hostname from zsh.
+#
 # Revision 1.7  2004/09/07 12:58:41  ilmari
 # SNMP plugin "df" properly strips the label and serial number fromWindows drive labels.
 #
@@ -70,7 +73,7 @@ if ($0 =~ /^(?:|.*\/)snmp_([^_]+)_df$/)
 		$port = $2;
 	}
 }
-else
+elsif (!defined($host))
 {
 	print "# Debug: $0 -- $1\n" if $DEBUG;
 	die "# Error: couldn't understand what I'm supposed to monitor.";
